working only ui remaining

--- a/src/component/Calculator.css
+++ b/src/component/Calculator.css
@@ -3,9 +3,9 @@
     align-items: center;
     justify-content: center;
     margin: 100px 50px;
-    background-color: burlywood;
     flex-direction: column;
 }
+
 .result{
     display: flex;
     width: 210px;
@@ -13,15 +13,31 @@
     font-weight: bold;
     font-size: 30px;
 }
+
 .result.num::after{
     content: "=";
     height: inherit;
     font-weight: lighter;
 }
+
 .btn{
     height: 50px;
     width: 50px;
     padding: 5px;
     border: 2px solid black;
     margin: 2px;
+    background-color: lightblue;
+    opacity: 1;
+}
+
+.btn:hover{
+    opacity: .5;
+}
+
+.btn.submit{
+    background-color: lightcoral;
+}
+
+.btn.operation{
+    background-color: lightgray;
 }
